--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="findPrime.js"></script> -->
-    <script src="rowMax1s.js"></script>
+    <!-- <script src="rowMax1s.js"></script> -->
+    <!-- <script src="practice.js"></script> -->
+    <script src="firstRepeatingIndex.js"></script>
 </head>
 <body>
     
