--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <!-- <script src="findPrime.js"></script> -->
     <!-- <script src="rowMax1s.js"></script> -->
     <!-- <script src="practice.js"></script> -->
-    <script src="firstRepeatingIndex.js"></script>
+    <!-- <script src="dateObj.js"></script> -->
+    <script src="decodeString.js"></script>
+    <!-- <script src="tricky.js"></script> -->
 </head>
 <body>
     
