some more dsa problems

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <!-- <script src="rowMax1s.js"></script> -->
     <!-- <script src="practice.js"></script> -->
     <!-- <script src="dateObj.js"></script> -->
-    <script src="decodeString.js"></script>
+    <!-- <script src="decodeString.js"></script> -->
     <!-- <script src="tricky.js"></script> -->
+    <!-- <script src="sieve.js"></script> -->
+    <!-- <script src="subArrWith0Sum.js"></script> -->
+    <script src="practice2.js"></script>
 </head>
 <body>
     
