--- a/pattern/index.html
+++ b/pattern/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <script src="hollowpattern.js"></script>
+    <!-- <script src="hollowpattern.js"></script> -->
+    <!-- <script src="practice.js"></script> -->
+    <script src="practiceProgramExecution.js"></script>
 </head>
 <body>
     
