--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="findPrime.js"></script> -->
-    <!-- <script src="rowMax1s.js"></script> -->
+    <script src="rowMax1s.js"></script>
     <!-- <script src="practice.js"></script> -->
     <!-- <script src="dateObj.js"></script> -->
     <!-- <script src="decodeString.js"></script> -->
     <!-- <script src="tricky.js"></script> -->
     <!-- <script src="sieve.js"></script> -->
     <!-- <script src="subArrWith0Sum.js"></script> -->
-    <script src="practice2.js"></script>
+    <!-- <script src="practice2.js"></script> -->
+    <!-- <script src="break.js"></script> -->
+    <!-- <script src="longestUnqSubStr.js"></script> -->
 </head>
 <body>
     
