--- a/hacker rank/index.html
+++ b/hacker rank/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="practice.js"></script> -->
-    <script src="tricky.js"></script>
+    <script src="repeatString.js"></script>
 </head>
 <body>
     
